samples/_failures_safe/1761127324_77841d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e205351c.c: In function ‘main’:
./samples/SAFE/__tmp_e205351c.c:162:9: error: expected declaration or statement at end of input
  162 |         if (token.type == TOKEN_EOF || token.type == TOKEN_ERROR) {
      |         ^~
./samples/SAFE/__tmp_e205351c.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e205351c.c:162:9: error: expected declaration or statement at end of input
